--- a/src/layouts/BasicLayout.css
+++ b/src/layouts/BasicLayout.css
@@ -21,10 +21,14 @@ nav button:hover {
 	cursor: pointer;
 	border-radius: 10px;
 }
-
-nav button:visited {
-	color: #fff;
+nav .hamburger-icon {
+	background: orange;
 }
+
+nav .hamburger-icon:hover {
+	background: red;
+}
+
 nav .navWide {
 	display: none;
 	margin: 0 auto;
@@ -41,7 +45,9 @@ nav .navNarrow .narrowLinks div {
 }
 .hamburger {
 	display: flex;
+	border-radius: 4px;
 }
+
 .icon {
 	max-width: 24px;
 }
