feat:update css

--- a/src/components/carts/Carts.css
+++ b/src/components/carts/Carts.css
@@ -23,8 +23,11 @@
 }
 
 .quantity-cart-wrapper p {
-	font-size: 1em;
 	margin: 8px;
+	font-weight: bold;
+	padding: 8px;
+	font-size: 1.25em;
+	margin: 0;
 }
 
 .item {
