--- a/src/components/products/Products.css
+++ b/src/components/products/Products.css
@@ -11,6 +11,7 @@
 	box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 	/* //background-color: #e5e5e5; */
 }
+
 .description {
 	height: 45%;
 	font-size: 12px;
@@ -33,6 +34,12 @@
 	max-width: 200px;
 	display: inline-block;
 	margin-bottom: 8px;
+}
+
+.quantity-cart-wrapper .shopping-cart-icon {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .product {
@@ -86,7 +93,8 @@
 }
 
 .quantity-cart-wrapper p {
-	color: red;
+	margin: 8px;
+	font-weight: bold;
 	padding: 8px;
 	font-size: 1.25em;
 	margin: 0;
